add reservation calc from dates between, amount of people and logic for minors